--- a/static/css/halloween.css
+++ b/static/css/halloween.css
@@ -165,7 +165,7 @@ body {
 }
 
 .gallery-item img {
-    width: 100%;
+    width: 250px;
     height: 250px;
     object-fit: cover;
     display: block;
@@ -223,12 +223,16 @@ body {
     }
     
     .gallery {
-        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(150px, 150px));
         gap: 15px;
+        justify-content: center;
+        justify-items: center;
+        margin: 0 auto;
     }
     
     .gallery-item img {
         height: 150px;
+        width: 150px;
     }
     
     .search-box form {
