--- a/static/css/halloween.css
+++ b/static/css/halloween.css
@@ -138,6 +138,10 @@ body {
 
 .gallery {
     display: grid;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
     grid-template-columns: repeat(auto-fill, minmax(250px, 250px));
     gap: 20px;
     margin-top: 30px;
